--- a/portfolio.css
+++ b/portfolio.css
@@ -38,6 +38,9 @@ a{
 
 #header{
     display: inline-block;
+    position:fixed;
+    z-index:1;
+    margin-top:-59px;
     background-color:#FFFFFF;
     box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
 }
@@ -73,6 +76,14 @@ a{
 #intro{
 
     height:385px;
+}
+
+#introNpic{
+    margin-top:0px;
+}
+
+#introNpic{
+    margin-top:59px;
 }
 
 #insideIntro{
@@ -479,6 +490,12 @@ a{
         line-height: 30px;
     }
 
+    #header{
+        position:relative;
+        z-index:0;
+        margin-top:0;
+    }
+
         /* Intro n Pic */
 
     /* Intro */
@@ -488,6 +505,10 @@ a{
         left:50%;
         top:0%;
         transform: translate(-50%);
+    }
+
+    #introNpic{
+        margin-top:0px;
     }
 
     /* Pic */
